# faster-pointcloud-distance

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cloud_distance/: CMakeLists.txt
cloud_distance/include/cloud_distance/: distance.cuh  distance.h  distance_omp.h  io.h  sample.h
cloud_distance/src/: distance.cpp  distance.cu  distance_omp.cpp  io.cpp  sample.cpp
data/: make_smallers.py
data/testset/: 100A  100B  10A  10B  1A  1B
pcl/: CMakeLists.txt
pcl/cloud_distance/: CMakeLists.txt
pcl/cloud_distance/include/pcl/cloud_distance/: distance.cuh  distance.h  io.h
pcl/cloud_distance/src/: distance.cpp  distance.cu
pcl/cloud_distance/utils/: compute_distance.cpp  compute_distance_cuda.cu  read_point_cloud.cpp
pcl/cmake/: pcl_find_boost.cmake  pcl_utils.cmake
pcl/cmake/Modules/: FindEigen.cmake  FindFLANN.cmake
pcl/io/include/pcl/io/ply/: ply_parser.h
pcl/io/src/: ply_io.cpp
scripts/: transform_data.py
utils/: CMakeLists.txt
utils/compute_distance/: CMakeLists.txt  main.cpp
utils/compute_distance_cuda/: CMakeLists.txt  main.cpp
utils/compute_distance_omp/: CMakeLists.txt  main.cpp
utils/read_pointcloud/: CMakeLists.txt  main.cpp  shark.ply
